@startuml class

' !pragma layout smetana
' left to right direction

' skinparam linetype polyline
' skinparam linetype ortho
' skinparam groupInheritance 2

hide methods

enum PaymentMethod {
  Cash
  CreditCard
  DebitCard
}

class Payment {
  PaymentMethod Method
}

class Image {
  string Url
}

enum AppointmentStatus {
  Booked
  Confirmed
  Cancelled
  Completed
}

enum ExpertiseLevel {
  Junior
  Intermediate
  Senior
}

class Client {
  string Name
}

class Person {
  string Name
  string Surname
  string PhoneNumber
  string LegalId
  string Address
}

class Genre {
  string Name
}

class Client {
  bool IsLoyal
}

class User {
  string Name
  string Password
}

class Role {
  string Name
}

Person <|-- Client

class Review {
  float Rating
  string Comment
}

class Service {
  string Name
  string Description
  string Category
  float Price
  TimeSpan Duration
}

Review "1..*" -- "1" Service

class Promotion {
  string Name
  string Description
  float Discount
  DateTime StartDate
  DateTime EndDate
}



Promotion "1..*" -- "1" Service

class Category {
  float Rating
  string Comment
}

Category "1..*" -- "1..*" Service

class CategoryService {
  string AdditionalInfo
  DateOnly Date
}

(Category, Service) .. CategoryService

enum WeekDay {
  Monday
  Tuesday
  Wednesday
  Thursday
  Friday
  Saturday
  Sunday
}

class OpeningHours {
  WeekDay Day
  TimeOnly OpenTime
  TimeOnly CloseTime
}

class Appointment {
  DateTime Date
  string Note
  AppointmentStatus Status
  Payment PaymentInfo
}

Appointment "1..*" -- "1..*" Service

class ServiceDetail {
  float Price
  TimeSpan Duration
  DateTime Date
  int Amount
}

(Appointment, Service) .. ServiceDetail

class Notification {
  string Message
  DateTime Date

}

class BeautySalon {
  string Name
  string Address
  string PhoneNumber
  string email
}

class Branch {
  string Address
  string PhoneNumber
}

class Employee

class SocialNetwork {
  string Name
  string Url
}

class FranchisePayment {
  DateOnly Date
  float Amount
}

class EmployeeOperationHours {

}


Client "1" -- "0..*" Appointment
Genre "1" -- "1..*" Person
Person "1" -- "1" User
User "1..*" -- "1" Role
Person <|-- Employee
Branch "1" -- "1..*" Employee
Branch "1" -- "1..*" OpeningHours
Service "1..*" -- "1" BeautySalon
BeautySalon "1" -- "1..*" SocialNetwork
BeautySalon "1" -- "1..*" FranchisePayment
FranchisePayment -- Payment

class Bill {
  DateOnly Date
  string NIT
  string Name
  string Surname
}

FranchisePayment --|> Bill
BeautySalon "1" -- "1..*" Branch
Employee "1"-- "1..*" EmployeeOperationHours

class Specialty {
  string Name
}

class Training {
  float Rating
  ExpertiseLevel Level
}

Employee "1..*" -- "1..*" Specialty
(Employee, Specialty) .. Training

Appointment "1" -- "1..*" Notification
Appointment "1" -- "1..*" Image


@enduml
